<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#FFFFFF">


    <Button
            android:text="@string/btnDesconectar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDesconectar"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="#D6D7D7"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp" app:srcCompat="@drawable/rescata_banner"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerInside" android:contentDescription="@string/strBanner"
            android:background="#FFFFFF"/>
    <TextView
            android:text="@string/txtVersion"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="textEnd"
            android:textColor="#000101"
            android:background="#FFFFFF" app:layout_constraintBottom_toTopOf="@+id/btnDesconectar"/>
    <TextView
            android:text="@string/txtModo"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:textSize="30sp" android:textColor="#F2010103" android:background="#FFFFFF"/>
    <TextView
            android:text="@string/txtPAP"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/txtPap" app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" android:textSize="30sp" android:textColor="#FA131111"
            android:textAlignment="textEnd" android:textStyle="bold"/>
    <Button
            android:text="@string/btnCPap"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:id="@+id/btnC" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnPrin"
            android:textSize="36sp" android:textStyle="bold"
            android:backgroundTint="#1E88E5" android:background="@drawable/boton_redondo"
            android:textColor="#B2D6F6"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/txtPap"/>
    <Button
            android:text="@string/btnBiPap"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:id="@+id/btnBi" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/btnPrin" android:textSize="36sp" android:textStyle="bold"
            android:backgroundTint="#1E88E5" android:background="@drawable/boton_redondo" android:textColor="#A8FFFFFF"
            app:layout_constraintTop_toTopOf="@+id/textView5"/>
    <Button
            android:text="@string/btnPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrin"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            android:backgroundTint="#1EC7E5" android:background="@drawable/boton_redondo" />
    <Button
            android:text="@string/btnPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPres" app:layout_constraintStart_toEndOf="@+id/btnPrin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btnPrin"
            android:backgroundTint="#D6D7D7" android:background="@drawable/boton_redondo"/>
    <Button
            android:text="@string/btnOxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOxi" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPrin" app:layout_constraintBottom_toBottomOf="@+id/btnPrin"
            android:backgroundTint="#D6D7D7" android:background="@drawable/boton_redondo"/>
    <TextView
            android:text="@string/strControlPresion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/btnPrin"
            android:textSize="18sp"
            android:textColor="#D70C0909" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/txtPresSet"/>
    <TextView
            android:text="@string/strHipoxemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/btnC"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/btnPrin"/>
    <TextView
            android:text="@string/Hipercapnia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/btnBi"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btnPrin"
            android:textSize="18sp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/uach" android:id="@+id/imageView2"
            android:scaleType="fitXY" android:contentDescription="@string/strBanner"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/btnC"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/textView3"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/dgit" android:id="@+id/imageView4"
            android:contentDescription="@string/strBanner"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/btnBi"
            android:scaleType="centerInside" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="2dp" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnPrin" app:layout_constraintTop_toBottomOf="@+id/btnC"
            android:background="#1EC7E5"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="2dp" android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="#1EC7E5" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/btnBi"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/ic_send" android:id="@+id/btnSend"
            app:layout_constraintBottom_toTopOf="@+id/btnDesconectar" android:background="#FFFFFF"
            android:contentDescription="@string/strBanner" android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/txtPresSet" app:layout_constraintStart_toEndOf="@+id/txtPresGet"
    />
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtPresGet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDesconectar" android:hint="@string/txtPreHin"
            android:textAlignment="center" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txtPresSet" app:layout_constraintEnd_toEndOf="@+id/btnPres"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="60dp" android:id="@+id/txtPresSet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/btnDesconectar"
            android:textAlignment="center" android:textSize="30sp" android:textColor="#000000"
            android:textStyle="bold"
            android:background="#00897B"
            app:layout_constraintTop_toTopOf="@+id/btnPrin"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/ic_play" android:id="@+id/btnPlay"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/btnBi" app:layout_constraintStart_toEndOf="@+id/btnC"
            app:layout_constraintTop_toTopOf="@+id/btnBi" android:backgroundTint="#E200897B"
            android:background="@drawable/boton_redondo" android:contentDescription="@string/strBanner"
            app:layout_constraintHorizontal_bias="0.475" app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" android:hapticFeedbackEnabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>